--- a/Assignments/Week2/web/css/genel.css
+++ b/Assignments/Week2/web/css/genel.css
@@ -6,7 +6,17 @@
 	#container{
 
 		width:100%;
-		height:1050px;
+		height:95%;
+		margin: 0 auto;
+		background-color:rgb(0, 81, 255);
+
+	}
+	#login-container{
+
+		display: grid;
+		place-content: center;
+		width:100%;
+		height:95%;
 		margin: 0 auto;
 		background-color:rgb(0, 81, 255);
 
@@ -18,6 +28,13 @@
 		display: flex;
 		gap: 16px;
 		justify-content: center;
+	}
+	nav a{
+		color: rgb(0, 0, 0);
+		font-weight: 800;
+	}
+	nav a:hover{
+		color:blue;
 	}
 	#login a{
 		display: inline-block;
@@ -70,4 +87,20 @@
 		height:90px;
 		background-color:rgb(225, 90, 6);
 
+	}
+
+
+	#login-card{
+		color: aqua;
+	}
+
+	#register-card{
+		color: aqua;
+	}
+	#auth-grid{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 20px;
+		align-items: start;
+		justify-items: stretch;
 	}
