--- a/Assignments/Week2/web/css/genel.css
+++ b/Assignments/Week2/web/css/genel.css
@@ -11,7 +11,7 @@
 
 	}
 	#login-container{
-
+		border-radius: 16px;
 		display: grid;
 		place-content: center;
 		width:100%;
@@ -117,3 +117,35 @@
 		max-width: 800px;
 		margin: 0 auto;
 	}
+
+	.form{
+		display: grid;
+		gap: 16px;
+	}
+	.field{
+		display: grid;
+		font-weight: 700;
+		font-size: 24px;
+		color:rgb(0, 0, 0);
+	}
+	.field input{
+		height: 25px;
+		margin: 10 25 10 25;
+		font-weight: 700;
+		font-size: 16px;
+		border-radius: 16px;
+		text-align: center;
+		color:rgb(255, 0, 0)
+	}
+	.auth-button{
+		margin: 10 25 10 25;
+	}
+	.btn{
+		font-size: 20px;
+		font-weight: 600;
+		border-radius: 16px;
+	}
+	.btn:hover{
+		color: blue;
+	}
+	
