--- a/Assignments/Week2/web/css/genel.css
+++ b/Assignments/Week2/web/css/genel.css
@@ -6,7 +6,7 @@
 		width:100%;
 		height:95%;
 		margin: 0 auto;
-		background-color:rgb(0, 81, 255);
+		/* background-color:rgb(0, 81, 255); */
 		border-radius: 16px;
 
 	}
@@ -17,7 +17,6 @@
 		width:100%;
 		height:95%;
 		margin: 0 auto;
-		background-color:rgb(0, 81, 255);
 
 	}
 	nav ul{
@@ -39,7 +38,7 @@
 		display: inline-block;
 		padding: 8px 12px;
 		border-radius: 8px;
-		background: rgb(255, 255, 255);
+		background: white;
 		color:rgb(227, 7, 7);
 		text-decoration: none;
 		font-weight: 600;
@@ -102,9 +101,9 @@
 	}
 	#auth-text{
 		margin: 0 0 12px 0;
-  		font-size: 30px;
+  		font-size: 40px;
   		font-weight: 700;
-		color:maroon;
+		color:rgb(0, 0, 0);
 	}
 	#auth-grid{
 		display: grid;
