--- a/Assignments/Week2/web/css/genel.css
+++ b/Assignments/Week2/web/css/genel.css
@@ -28,7 +28,7 @@
 		justify-content: center;
 	}
 	nav a{
-		color: rgb(0, 0, 0);
+		color: #615dee;
 		font-weight: 800;
 	}
 	nav a:hover{
@@ -39,7 +39,7 @@
 		padding: 8px 12px;
 		border-radius: 8px;
 		background: white;
-		color:rgb(227, 7, 7);
+		color:#1b82de;
 		text-decoration: none;
 		font-weight: 600;
 		margin-right: 50px;
@@ -55,7 +55,7 @@
 		display: grid;
 		grid-template-columns: 150px 1fr auto;
 		align-items: center;
-		margin-top:20px;
+		margin-top: 20px;
 		column-gap: 20px;
 		width: 90%;
 		background-color:rgb(0, 242, 255);
@@ -64,7 +64,9 @@
 	#logo{
 		width:200px;
 		height:150px;
-		margin-left: 20px;
+		margin-top: 20px;
+		margin-left: 30px;
+		margin-bottom: 20px;
 		background-color:rgb(255, 255, 255);
 		align-items: center;
 
@@ -76,7 +78,7 @@
 		width: 90%;
 		height:auto;
 		min-height: 60%;
-		background-color:rgb(192, 255, 194);
+		background-color:#F3E8FF;
 
 	}
 	#footer{
@@ -85,7 +87,7 @@
 		width:90%;
 		height:auto;
 		min-height: 15%;
-		background-color:rgb(225, 90, 6);
+		background-color:#60A5FA;
 
 	}
 
@@ -108,13 +110,11 @@
 	#auth-grid{
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		gap: 20px;
-		width: 800px;
+		gap: 25px;
+		width: 900px;
 		align-items: start;
-		justify-items: stretch;
 		justify-content: center;
-		max-width: 800px;
-		margin: 0 auto;
+		max-width: 900px;
 	}
 
 	.form{
