chore: add charset meta tag to HTML files and update Web.config for globalization settings

--- a/Assignments/Week3/WEB/admin/admin.Master
+++ b/Assignments/Week3/WEB/admin/admin.Master
@@ -4,6 +4,7 @@
 
 <html>
 <head runat="server">
+    <meta charset="utf-8" />
     <title>İMÜ Kütüphanesi - Yönetici Paneli</title>
     <link rel="shortcut icon" type="image/png" href="../images/logo.png">
     <link rel="stylesheet" href="../css/genel.css">
