--- a/Assignments/Week3/WEB/admin/admin.Master
+++ b/Assignments/Week3/WEB/admin/admin.Master
@@ -25,6 +25,7 @@
                 <ul class="menu">
                     <li><a href="index_admin.aspx">Admin Ana Sayfa</a></li>
                     <li><a href="kitaplar.aspx">Kitaplar Yönetimi</a></li>
+                    <li><a href="uyeler.aspx">Üyeler</a></li>
                     <li><a href="../index.aspx">Çıkış</a></li>
                 </ul>
             </nav>
